Added code to use dna database (not tested yet) and made small bugfixes.